<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
<item android:title="@string/graphic_fragment"
    android:id="@+id/navi_menu_item_Monitor"
    android:icon="@drawable/ic_action_name"
    ></item>
    <item android:title="@string/list_fragment"
        android:id="@+id/navi_menu_item_DataList"
        android:icon="@drawable/ic_format_list_numbered_black_24dp"></item>
    <item android:title="@string/setting"
        android:icon="@drawable/ic_settings_black_24dp"
        android:id="@+id/navi_menu_item_Setting"></item>
    <item android:title="@string/wifi_config"
        android:icon="@drawable/ic_network_check_black_24dp"
        android:id="@+id/navi_menu_item_WifiConfig"></item>
    <item
        android:id="@+id/navi_menu_item_Language"
        android:title="@string/language_setting" />
</menu>